# AABBlocks

./: .clang-format  CMakeLists.txt  CMakePresets.json  Readme.md  renderDoc.cap
res/: BlockData.csv  NewMap.sql
res/shaders/: deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  dispatcher.comp  dispatcher.comp.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
src/: CMakeLists.txt  FastNoiseLite.h  input.hpp  main.cpp  types.hpp
src/collisions/: collisions.cpp  collisions.hpp  raycast.cpp
src/rendering/: buffer_writter.cpp  buffer_writter.hpp  chunk_renderer.cpp  chunk_renderer.hpp  command_buffer.cpp  command_buffer.hpp  debug.cpp  debug.hpp  deferred_renderer.cpp  deferred_renderer.hpp  mapped_buffer.cpp  mapped_buffer.hpp  render_command_buffer.hpp  renderer.cpp  renderer.hpp  staging_buffer.cpp  staging_buffer.hpp  texture_2d.cpp  texture_2d.hpp  world_renderer.cpp  world_renderer.hpp
src/scenes/: scene_mainmenu.cpp  scene_mainmenu.hpp  scene_world.cpp  scene_world.hpp
src/utils/: debug.cpp  debug.hpp  errors.cpp  errors.hpp  files.cpp  files.hpp  logger.hpp
src/vk/: buffers.cpp  buffers.hpp  compute_pipeline.cpp  compute_pipeline.hpp  deletion.cpp  deletion.hpp  descriptors.cpp  descriptors.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  init.hpp  one_time_commands.cpp  one_time_commands.hpp  textures.cpp  textures.hpp  types.cpp  types.hpp  util.hpp  vk_raii.hpp
src/world/: chunk_data.cpp  chunk_data.hpp  player.cpp  player.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp  world_persistence.cpp  (+1 more)
(+12 files in other folders)
